minitrace-macro/tests/ui/err/has-name-and-short-name.stderr
error: `name` and `short_name` can not be used together
 --> tests/ui/err/has-name-and-short-name.rs:3:1
  |
3 | #[trace(name = "Name", short_name = true)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `trace` (in Nightly builds, run with -Z macro-backtrace for more info)
