minitrace-macro/tests/ui/err/has-name-and-short-name.rs
use minitrace::trace;

#[trace(name = "Name", short_name = true)]
fn f() {}

fn main() {}
